# qt-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
source/: Main.qml  main.cpp
